--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listowel Adolwin</title>
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io1/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io1/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io1/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon_io1/site.webmanifest">
+    <!--favicon-->
     <script src="https://kit.fontawesome.com/2070b3b8bb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
@@ -16,8 +22,8 @@
         <div class="container">
             <nav class="header-nav">
                 <img class="logo" src="images/logo.png" alt="">
-                <i class="fas fa-times" onclick="hideMenu()"></i>
                 <ul>
+                    <i class="fas fa-times" onclick="hideMenu()"></i>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Projects</a></li>
@@ -27,12 +33,15 @@
                 <i class="fas fa-bars" onclick="showMenu()"></i>
             </nav>
             <div class="header-text">
-                <div class="text-section">
-                    <p>
+                <div class="text-section typewriter">
+                    <div class="typewritter-div">
+                    <p class="name-p">
                         Hi there, I am
-                    </p>
+
                     <h1><span class="first-name">Listowel</span> Adolwin <br> from Ghana</h1>
+                </p>
                     <p>I am a Software Engineer</p>
+                </div>
                 </div>
                 <div class="picture-section">
                     <img class="about-image" src="images/background-pic.jpg" alt="">
@@ -41,7 +50,10 @@
 
         </div>
     </div>
-    <a class = "to-top" href="#header"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
+    <div class="totop">
+        <a class = "to-top" href="#header"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
+        <span class="tooltiptext">Back to top</span>
+    </div>
 
     <div id="about">
         <div class="container">
@@ -122,24 +134,38 @@
                     <img src="images/work-1.png" alt="">
                     <div class="layer">
                         <h3>AirBnB Application</h3>
-                        <p>Fullstack clone of the Airbnb Web application</p>
+                        <p>Full-stack clone of the Airbnb Web application</p>
+                        <p><ul class="tools-used">
+                            <li>Python</li>
+                            <li>MySQL</li>
+                            <li>JavaScript</li>
+                            <li>HTML/CSS</li>
+                        </ul></p>
                         <a href="https:www.listoweladolwin.tech/hbnb_static/103-index.html"><i class="fas fa-external-link-alt" ></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-2.png" alt="">
                     <div class="layer">
-                        <h3>AirBnB Application</h3>
-                        <p>Fullstack clone of the Airbnb Web application</p>
-                        <a href="https:www.listoweladolwin.tech/hbnb_static/103-index.html">Link</a>
+                        <h3>C - SHELL</h3>
+                        <p>Built a SHELL from scratch which replicates the functionalities of </p>
+                        <p><ul class="tools-used">
+                            <li>C</li>
+                            <li>UIzard</li>
+                        </ul></p>
+                        <a href="https:www.listoweladolwin.tech/hbnb_static/103-index.html"><i class="fas fa-external-link-alt" ></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-3.png" alt="">
                     <div class="layer">
-                        <h3>AirBnB Application</h3>
-                        <p>Fullstack clone of the Airbnb Web application</p>
-                        <a href="https:www.listoweladolwin.tech/hbnb_static/103-index.html">Link</a>
+                        <h3>Lost and Found App</h3>
+                        <p>Devloped it to enable students easily recover their missing items</p>
+                        <p><ul class="tools-used">
+                            <li>Flutter</li>
+                            <li>UIzard</li>
+                        </ul></p>
+                        <a href="https:www.listoweladolwin.tech/hbnb_static/103-index.html"><i class="fas fa-external-link-alt" ></i></a>
                     </div>
                 </div>
             </div>
@@ -155,7 +181,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fas fa-paper-plane"></i><a class="email" href="mailto:">listoweladolwin@gmail.com</a> </p>
+                    <p><i class="fas fa-paper-plane"></i><a class="email" href="mailto:listoweladolwin@gmail.com">listoweladolwin@gmail.com</a> </p>
                     <p><i class="fas fa-phone-square-alt"></i>+233550462566</p>
                     <div class="social-icons">
                         <a href="http://github.com/ListowelAdolwin" target="_blank"><i
