Edited the experience section

--- a/index.html
+++ b/index.html
@@ -109,16 +109,14 @@
                         <ul>
                             <li><span>Research Assistant - KNUST </span> <br>
                                 <ul>
-                                    <li>- Researched extensively on Internet Of Things, which will <br> be crucial to the
-                                        committee's final product</li>
-                                    <li>- Designed logo for the committee with Adobe Photoshop which <br> pushed our
-                                        audience reach by over 25%</li>
+                                    <li>- Researched extensively on Internet Of Things</li>
+                                    <li>Designed a logo for the committee</li>
                                 </ul>
                             </li>
                             <li><span>Financial - Secretary Computer Science Society</span> <br>
                                 <ul>
-                                    <li>- Prepared the society's budgets and financial statements, <br> which resulted in over 20% of its funds being saved</li>
-                                    <li>- Ensured complete transparency in all society transactions <br> by reviewing and processing them</li>
+                                    <li>- Prepares the society's budgets and financial statements, </li>
+                                    <li>- Collaborates with my co-executives to organize skills programmes</li>
                                 </ul>
                             </li>
                         </ul>
