--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>
-                        I am a passionate Software Engineer. I like to build things for the Internet <br>
+                    <p class="about-line-height">
+                        I am a passionate Software Engineer. I like to build things for the Internet
                         I work well with both Front-end and Back-end, even though, I am more versed with front-end.
-                        I am currently working on my data structures and algorithms. <br>
+                        I am currently working on my data structures and algorithms.
                         Need me for any collaboration? I am down, let's get it done.
                     </p>
                     <div class="tab-titles ">
@@ -110,7 +110,7 @@
                             <li><span>Research Assistant - KNUST </span> <br>
                                 <ul>
                                     <li>- Researched extensively on Internet Of Things</li>
-                                    <li>Designed a logo for the committee</li>
+                                    <li>- Designed a logo for the committee</li>
                                 </ul>
                             </li>
                             <li><span>Financial - Secretary Computer Science Society</span> <br>
@@ -123,8 +123,9 @@
                     </div>
                     <div id="education" class="tab-content">
                         <ul>
-                            <li><span>KNUST - 2021 - 2024</span> <br> Bachelor Of Science in Computer Science</li>
-                            <li><span>ALX - 2021 - 2022</span> <br> Software Engineering</li>
+                            <li><span>KNUST  &nbsp; &nbsp;&nbsp; &nbsp; January 2021 - September 2024</span> <br> Bachelor Of Science in Computer Science</li>
+                            <li><span>African Leadership Experience SE  &nbsp; &nbsp;&nbsp; &nbsp;     March 2021 - March 2022</span> <br> Software Engineering</li>
+                            <li><span>Bolgatanga SHS   &nbsp; &nbsp;&nbsp; &nbsp;     September 2020 - September 2020</span> <br> General Science</li>
                         </ul>
                     </div>
                 </div>
