--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p class="about-line-height">
-                        I am a passionate Software Engineer. I like to build things for the Internet
+                        I am a passionate Software Engineer. I like to build things for the Internet.
                         I work well with both Front-end and Back-end, even though, I am more versed with front-end.
                         I am currently working on my data structures and algorithms.
                         Need me for any collaboration? I am down, let's get it done.
