--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <li>- Designed a logo for the committee</li>
                                 </ul>
                             </li>
-                            <li><span>Financial - Secretary Computer Science Society</span> <br>
+                            <li><span>Financial Secretary - Computer Science Society</span> <br>
                                 <ul>
                                     <li>- Prepares the society's budgets and financial statements, </li>
                                     <li>- Collaborates with my co-executives to organize skills programmes</li>
@@ -123,9 +123,9 @@
                     </div>
                     <div id="education" class="tab-content">
                         <ul>
-                            <li><span>KNUST  &nbsp; &nbsp;&nbsp; &nbsp; January 2021 - September 2024</span> <br> Bachelor Of Science in Computer Science</li>
-                            <li><span>African Leadership Experience SE  &nbsp; &nbsp;&nbsp; &nbsp;     March 2021 - March 2022</span> <br> Software Engineering</li>
-                            <li><span>Bolgatanga SHS   &nbsp; &nbsp;&nbsp; &nbsp;     September 2020 - September 2020</span> <br> General Science</li>
+                            <li><span>KNUST  &nbsp; &nbsp;&nbsp; 2021 - 2024</span> <br>. Bachelor Of Science in Computer Science</li>
+                            <li><span>ALX SE  &nbsp; &nbsp;&nbsp;   2021 - 2022</span> <br>. Software Engineering</li>
+                            <li><span>Bolgatanga SHS   &nbsp; &nbsp;&nbsp; 2020 - 2020</span> <br>. General Science</li>
                         </ul>
                     </div>
                 </div>
