--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                     <div id="education" class="tab-content">
                         <ul>
-                            <li><span>KNUST  &nbsp; &nbsp;&nbsp; 2021 - 2024</span> <br>. Bachelor Of Science in Computer Science</li>
+                            <li><span>KNUST  &nbsp; &nbsp;&nbsp; 2021 - 2024</span> <br>. BSc Computer Science</li>
                             <li><span>ALX SE  &nbsp; &nbsp;&nbsp;   2021 - 2022</span> <br>. Software Engineering</li>
                             <li><span>Bolgatanga SHS   &nbsp; &nbsp;&nbsp; 2020 - 2020</span> <br>. General Science</li>
                         </ul>
