--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <form action="">
                         <input type="text" name="name" placeholder="Enter name" required>
                         <input type="email" name="email" placeholder="Enter email" required>
-                        <textarea name="message" id="message" rows="5" placeholder="Enter you message"></textarea>
+                        <textarea name="message" id="message" rows="5" placeholder="Enter message"></textarea>
                         <button class="submit see-more-btn cv" type="submit">Send</button>
                     </form>
                 </div>
