--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Projects</a></li>
-                    <li><a target="_blank" href="blog.html">Blog</a></li>
+                    <li><a target="_blank" href="https://listoweladolwin.wixsite.com/listoweltech">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <i class="fas fa-bars" onclick="showMenu()"></i>
