Added more projects and also added more design

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listowel Adolwin</title>
     <!--favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io1/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io1/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io1/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon_io1/site.webmanifest">
-    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon_io/site.webmanifest">
+    <!--favicon ends-->
+
     <script src="https://kit.fontawesome.com/2070b3b8bb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
@@ -84,6 +85,13 @@
                                     <li>MySQL</li>
                                 </ul>
                             </li>
+
+                            <li><span>Frameworks</span> <br>
+                                <ul class="programming-languages">
+                                    <li>Django,</li>
+                                    <li>Bootstrap</li>
+                                </ul>
+                            </li>
                             <li><span>Familiar Languages</span> <br>
                                 <ul class="programming-languages">
                                     <li>C++,</li>
@@ -93,6 +101,7 @@
                                     <li>Assembly Language</li>
                                 </ul>
                             </li>
+
                             <li><span>Developer Tools</span> <br>
                                 <ul class="programming-languages">
                                     <li>Git & GitHub,</li>
@@ -166,6 +175,36 @@
             <h1 class="sub-title">Projects</h1>
             <div class="work-list">
                 <div class="work">
+                    <img src="images/work-3.png" alt="">
+                    <div class="layer">
+                        <h3>StudyMate Application</h3>
+                        <p>
+                            A social app for developers to find study buddies to
+                            to accelerate their learning pace
+                        </p>
+                        <p>
+                        <ul class="tools-used">
+                            <li>Django</li>
+                            <li>Bootstrap</li>
+                            <li>MySQL</li>
+                        </ul>
+                        </p>
+
+                        <div class="d-flex">
+                            <div class="decorate">
+                                <a target="_blank" href="https://listowel.pythonanywhere.com/"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                            </div>
+
+                            <div class="float-end decorate">
+                            <a target="_blank" href="https://github.com/ListowelAdolwin/study_mate_app"><i
+                                class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="work">
                     <img src="images/work-1.png" alt="">
                     <div class="layer">
                         <h3>AirBnB Application</h3>
@@ -178,8 +217,17 @@
                             <li>HTML/CSS</li>
                         </ul>
                         </p>
+                        <div class="d-flex">
+                        <div class="decorate">
                         <a target="_blank" href="https:www.listoweladolwin.tech/hbnb_static/103-index.html"><i
                                 class="fas fa-external-link-alt"></i></a>
+                        </div>
+
+                        <div class="float-end decorate">
+                        <a target="_blank" href="https://github.com/ListowelAdolwin/AirBnB_clone_v2"><i
+                            class="fa-brands fa-github"></i></a>
+                        </div>
+                    </div>
                     </div>
                 </div>
                 <div class="work">
@@ -192,11 +240,20 @@
                             <li>C</li>
                         </ul>
                         </p>
-                        <a target="_blank" href="https://github.com/ListowelAdolwin/simple_shell"><i
-                                class="fas fa-external-link-alt"></i></a>
+                        <div class="d-flex">
+                            <div class="decorate">
+                                <a target="_blank" href="https://github.com/ListowelAdolwin/simple_shell"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                            </div>
+
+                            <div class="float-end decorate">
+                            <a target="_blank" href="https://github.com/ListowelAdolwin/simple_shell"><i
+                                class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work hidden-project">
                     <img src="images/work-3.png" alt="">
                     <div class="layer">
                         <h3>Lost and Found App</h3>
@@ -207,12 +264,74 @@
                             <li>UIzard</li>
                         </ul>
                         </p>
-                        <a target="_blank" href="https://github.com/ListowelAdolwin/lost_and_found_app"><i
-                                class="fas fa-external-link-alt"></i></a>
+
+                        <div class="d-flex">
+                            <div class="decorate">
+                                <a target="_blank" href="https://github.com/ListowelAdolwin/lost_and_found_app"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                            </div>
+
+                            <div class="float-end decorate">
+                            <a target="_blank" href="https://github.com/ListowelAdolwin/lost_and_found_app"><i
+                                class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="work hidden-project">
+                    <img src="images/work-3.png" alt="">
+                    <div class="layer">
+                        <h3>University Website</h3>
+                        <p>
+                            A custom website for my University.
+                        </p>
+                        <p>
+                        <ul class="tools-used">
+                            <li>JavaScript</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
+                        </p>
+                        <div class="d-flex">
+                            <div class="decorate">
+                                <a target="_blank" href="https://listoweladolwin.github.io/university-website/"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                            </div>
+
+                            <div class="float-end decorate">
+                            <a target="_blank" href="https://github.com/ListowelAdolwin/university-website"><i
+                                class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="work hidden-project">
+                    <img src="images/work-3.png" alt="">
+                    <div class="layer">
+                        <h3>Grid Portfolio</h3>
+                        <p>A portfolio website I designed to practice grid</p>
+                        <p>
+                        <ul class="tools-used">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
+                        </p>
+                        <div class="d-flex">
+                            <div class="decorate">
+                                <a target="_blank" href="https://listoweladolwin.github.io/grid-portfolio/"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                            </div>
+
+                            <div class="float-end decorate">
+                            <a target="_blank" href="https://github.com/ListowelAdolwin/grid-portfolio"><i
+                                class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <a href="#" class="see-more-btn">See more</a>
+            <span class="see-more-btn" id="show-more" onclick="showProjects()">See more</span>
         </div>
     </div>
 
