--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
                     <a class="CV see-more-btn" href="#" download="">Download CV </a>
                 </div>
                 <div class="contact-right">
-                    <form action="">
-                        <input type="text" name="name" placeholder="Enter name" required>
-                        <input type="email" name="email" placeholder="Enter email" required>
+                    <form action="https://formsubmit.co/listoweladolwin@gmail.com" method="POST">
+                        <input type="text" id="name" name="name" placeholder="Enter name" required>
+                        <input type="email" id="email" name="email" placeholder="Enter email" required>
                         <textarea name="message" id="message" rows="5" placeholder="Enter message"></textarea>
                         <button class="submit see-more-btn cv" type="submit">Send</button>
                     </form>
@@ -386,6 +386,25 @@
         function hideMenu() {
             navLinks.style.right = "-200px";
         }
+    </script>
+    <script src=" https://smtpjs.com/v3/smtp.js">
+
+    </script>
+
+    <script>
+        function sendEmail(){
+            Email.send({
+            Host : "listoweladolwin@gmail.com",
+            Username : "listoweladolwin@gmail.com",
+            Password : "550462566",
+            To : 'listowelmoro0@gmail.com',
+            From : document.getElementById('email').value,
+            Subject : "New Portfolio Message",
+            Body : "And this is the body"
+            }).then(
+            message => alert(message)
+            );
+            }
     </script>
 </body>
 
