--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <script src="https://kit.fontawesome.com/2070b3b8bb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <!--Submit form JS-->
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("zgd11UDFbCUBUUvs-");
+        })();
+    </script>
 </head>
 
 <body>
@@ -132,9 +141,9 @@
                     </div>
                     <div id="education" class="tab-content">
                         <ul>
-                            <li><span>KNUST  &nbsp; &nbsp;&nbsp; 2021 - 2024</span> <br>. BSc Computer Science</li>
-                            <li><span>ALX SE  &nbsp; &nbsp;&nbsp;   2021 - 2022</span> <br>. Software Engineering</li>
-                            <li><span>Bolgatanga SHS   &nbsp; &nbsp;&nbsp; 2020 - 2020</span> <br>. General Science</li>
+                            <li><span>KNUST &nbsp; &nbsp;&nbsp; 2021 - 2024</span> <br>. BSc Computer Science</li>
+                            <li><span>ALX SE &nbsp; &nbsp;&nbsp; 2021 - 2022</span> <br>. Software Engineering</li>
+                            <li><span>Bolgatanga SHS &nbsp; &nbsp;&nbsp; 2020 - 2020</span> <br>. General Science</li>
                         </ul>
                     </div>
                 </div>
@@ -193,12 +202,12 @@
                         <div class="d-flex">
                             <div class="decorate">
                                 <a target="_blank" href="https://listowel.pythonanywhere.com/"><i
-                                    class="fas fa-external-link-alt"></i></a>
+                                        class="fas fa-external-link-alt"></i></a>
                             </div>
 
                             <div class="float-end decorate">
-                            <a target="_blank" href="https://github.com/ListowelAdolwin/study_mate_app"><i
-                                class="fa-brands fa-github"></i></a>
+                                <a target="_blank" href="https://github.com/ListowelAdolwin/study_mate_app"><i
+                                        class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -218,16 +227,16 @@
                         </ul>
                         </p>
                         <div class="d-flex">
-                        <div class="decorate">
-                        <a target="_blank" href="https:www.listoweladolwin.tech/hbnb_static/103-index.html"><i
-                                class="fas fa-external-link-alt"></i></a>
-                        </div>
+                            <div class="decorate">
+                                <a target="_blank" href="https:www.listoweladolwin.tech/hbnb_static/103-index.html"><i
+                                        class="fas fa-external-link-alt"></i></a>
+                            </div>
 
-                        <div class="float-end decorate">
-                        <a target="_blank" href="https://github.com/ListowelAdolwin/AirBnB_clone_v2"><i
-                            class="fa-brands fa-github"></i></a>
+                            <div class="float-end decorate">
+                                <a target="_blank" href="https://github.com/ListowelAdolwin/AirBnB_clone_v2"><i
+                                        class="fa-brands fa-github"></i></a>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
                 <div class="work">
@@ -243,12 +252,12 @@
                         <div class="d-flex">
                             <div class="decorate">
                                 <a target="_blank" href="https://github.com/ListowelAdolwin/simple_shell"><i
-                                    class="fas fa-external-link-alt"></i></a>
+                                        class="fas fa-external-link-alt"></i></a>
                             </div>
 
                             <div class="float-end decorate">
-                            <a target="_blank" href="https://github.com/ListowelAdolwin/simple_shell"><i
-                                class="fa-brands fa-github"></i></a>
+                                <a target="_blank" href="https://github.com/ListowelAdolwin/simple_shell"><i
+                                        class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -268,12 +277,12 @@
                         <div class="d-flex">
                             <div class="decorate">
                                 <a target="_blank" href="https://github.com/ListowelAdolwin/lost_and_found_app"><i
-                                    class="fas fa-external-link-alt"></i></a>
+                                        class="fas fa-external-link-alt"></i></a>
                             </div>
 
                             <div class="float-end decorate">
-                            <a target="_blank" href="https://github.com/ListowelAdolwin/lost_and_found_app"><i
-                                class="fa-brands fa-github"></i></a>
+                                <a target="_blank" href="https://github.com/ListowelAdolwin/lost_and_found_app"><i
+                                        class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -296,12 +305,12 @@
                         <div class="d-flex">
                             <div class="decorate">
                                 <a target="_blank" href="https://listoweladolwin.github.io/university-website/"><i
-                                    class="fas fa-external-link-alt"></i></a>
+                                        class="fas fa-external-link-alt"></i></a>
                             </div>
 
                             <div class="float-end decorate">
-                            <a target="_blank" href="https://github.com/ListowelAdolwin/university-website"><i
-                                class="fa-brands fa-github"></i></a>
+                                <a target="_blank" href="https://github.com/ListowelAdolwin/university-website"><i
+                                        class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -320,12 +329,12 @@
                         <div class="d-flex">
                             <div class="decorate">
                                 <a target="_blank" href="https://listoweladolwin.github.io/grid-portfolio/"><i
-                                    class="fas fa-external-link-alt"></i></a>
+                                        class="fas fa-external-link-alt"></i></a>
                             </div>
 
                             <div class="float-end decorate">
-                            <a target="_blank" href="https://github.com/ListowelAdolwin/grid-portfolio"><i
-                                class="fa-brands fa-github"></i></a>
+                                <a target="_blank" href="https://github.com/ListowelAdolwin/grid-portfolio"><i
+                                        class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -359,12 +368,10 @@
                     <a class="CV see-more-btn" href="#" download="">Download CV </a>
                 </div>
                 <div class="contact-right">
-                    <form action="https://formsubmit.co/listoweladolwin@gmail.com" method="POST">
-                        <input type="text" id="name" name="name" placeholder="Enter name" required>
-                        <input type="email" id="email" name="email" placeholder="Enter email" required>
-                        <textarea name="message" id="message" rows="5" placeholder="Enter message"></textarea>
-                        <button class="submit see-more-btn cv" type="submit">Send</button>
-                    </form>
+                    <input type="text" id="name" name="name" placeholder="Enter name" required>
+                    <input type="email" id="email" name="email" placeholder="Enter email" required>
+                    <textarea name="message" id="message" rows="5" placeholder="Enter message"></textarea>
+                    <button class="submit see-more-btn cv" type="submit" onclick="sendMail()">Send</button>
                 </div>
             </div>
         </div>
@@ -386,25 +393,6 @@
         function hideMenu() {
             navLinks.style.right = "-200px";
         }
-    </script>
-    <script src=" https://smtpjs.com/v3/smtp.js">
-
-    </script>
-
-    <script>
-        function sendEmail(){
-            Email.send({
-            Host : "listoweladolwin@gmail.com",
-            Username : "listoweladolwin@gmail.com",
-            Password : "550462566",
-            To : 'listowelmoro0@gmail.com',
-            From : document.getElementById('email').value,
-            Subject : "New Portfolio Message",
-            Body : "And this is the body"
-            }).then(
-            message => alert(message)
-            );
-            }
     </script>
 </body>
 
