--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h1 class="sub-title">About Me</h1>
                     <p class="about-line-height">
                         I am a passionate Software Engineer. I like to build things for the Internet.
-                        I work well with both Front-end and Back-end, even though, I am more versed with front-end.
+                        I work well with both Front-end and Back-end, even though, I am more versed with back-end.
                         I am currently working on my data structures and algorithms.
                         Need me for any collaboration? I am down, let's get it done.
                     </p>
@@ -98,6 +98,7 @@
                             <li><span>Frameworks</span> <br>
                                 <ul class="programming-languages">
                                     <li>Django,</li>
+                                    <li>Flask,</li>
                                     <li>Bootstrap</li>
                                 </ul>
                             </li>
@@ -105,7 +106,6 @@
                                 <ul class="programming-languages">
                                     <li>C++,</li>
                                     <li>Java,</li>
-                                    <li>Flutter,</li>
                                     <li>Visual Basic,</li>
                                     <li>Assembly Language</li>
                                 </ul>
@@ -114,6 +114,7 @@
                             <li><span>Developer Tools</span> <br>
                                 <ul class="programming-languages">
                                     <li>Git & GitHub,</li>
+                                    <li>Docker,</li>
                                     <li>Vim,</li>
                                     <li>VS Code,</li>
                                     <li>Nginx,</li>
@@ -365,7 +366,7 @@
                         <a href="https://www.instagram.com/in/listowel-adolwin/" target="_blank"><i
                                 class="fa-brands fa-instagram"></i></a>
                     </div>
-                    <a class="CV see-more-btn" href="#" download="">Download CV </a>
+                    <a class="CV see-more-btn" href="images/MORO_LISTOWEL ADOLWIN Resume.pdf" download="">Download CV </a>
                 </div>
                 <div class="contact-right">
                     <input type="text" id="name" name="name" placeholder="Enter name" required>
